build crust with -g for backtraces

--- a/crust/Makefile
+++ b/crust/Makefile
@@ -6,7 +6,7 @@ OCAMLBUILD=ocamlbuild
 BUILD_PACKAGES=str
 OB_PACKAGE_STR=$(subst $(SPACE),$(COMMA),$(BUILD_PACKAGES))
 
-OCAMLBUILD_FLAGS=-use-ocamlfind -package $(OB_PACKAGE_STR)
+OCAMLBUILD_FLAGS=-cflag -g -lflag -g -use-ocamlfind -package $(OB_PACKAGE_STR)
 .PHONY: clean
 
 crust.byte: *.ml *.mli
