--- a/src/crust/Makefile
+++ b/src/crust/Makefile
@@ -9,7 +9,7 @@ OB_PACKAGE_STR=$(subst $(SPACE),$(COMMA),$(BUILD_PACKAGES))
 OCAMLBUILD_FLAGS=-cflag -g -lflag -g -use-ocamlfind -package $(OB_PACKAGE_STR) -tag debug
 .PHONY: clean
 
-crust.byte: *.ml *.mli
+crust.native: *.ml *.mli
 	$(OCAMLBUILD) $(OCAMLBUILD_FLAGS) $@
 
 clean:
